[package]
name = "libraryly-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper = "0.15.2"
juniper_rocket = "0.8.2"
neo4rs = "0.6.0"
rocket = "0.4.11"
rocket_codegen = "0.4.11"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = "1.3.1"